--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,46 +5,14 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
-    <FrameLayout
-        android:id="@+id/glviewFrameLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/buttonLayout"
+        android:orientation="vertical"
+        android:layout_centerInParent="true"
         >
 
-        <org.wysaid.view.FilterGLSurfaceView
-            android:id="@+id/myGLSurfaceView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </FrameLayout>
-
-    <SeekBar
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:id="@+id/seekBar"/>
-
-    <HorizontalScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_alignParentBottom="true"
-            android:id="@+id/menuLinearLayout">
-
-            <Button
-                android:layout_width="100dp"
-                android:layout_height="match_parent"
-                android:id="@+id/takeShotBtn"
-                android:text="拍照"/>
-
-            <Button
-                android:layout_width="100dp"
-                android:layout_height="match_parent"
-                android:id="@+id/recordBtn"
-                android:text="按住录像"/>
-
-        </LinearLayout>
-    </HorizontalScrollView>
+    </LinearLayout>
 
 </RelativeLayout>
